Changes

from version 0.994 to 0.995

bugfixes:
- fix crash on unloading a .def file for IV4 sensors
- fix a minur UI issue in the pump control tab


from version 0.993 to 0.994

improvements:
- when changing the unit of the displayed diagram values to nA or mmol/l
  all diagram values will be recalculated to this unit
  (the CSV output file will not be recalculated since it
   already contains the values in both units)

bugfixes:
- fix bug on calculating sensor value from readout data
- correct info in some error messages


from version 0.992 to 0.993

improvements:
- display the SIX ID number below the connected port
- it is now possible to set a time down to 0.05 s per pump action step

bugfixes:
- when entering Live mode assure that the other action steps are ignored
- don't allow to enter more than 100% duty cycle


from version 0.99 to 0.992

bugfixes:
- fix wrong channel assignment when changing channel appearance
- propose valid filenames for all file types when saving


from version 0.98 to 0.99

bugfixes:
- re-enable all settings after an action file was loaded and run
- when running multiple steps, show the currently executed step correctly

improvements:
- when more than one step is used, the currently executed step is
  highlighted by an asterisk in its name
- it is now possible to view the state of pumps 5 - 8 while the pumps
  are running
- the program stores now the chart settings when it is closed
  To get the default appearance, use the new menu
  Miscellaneous -> Reset Chart Appearance


from version 0.97 to 0.98

bugfixes:
- action files created with versions of JT Pump Driver that only support 4 pumps
  can now be loaded and executed without errors
- the settings for pump 5 - 8 are now disabled when their step is not used
- no action file can be loaded or saved while the pumps are running


from version 0.96 to 0.97

bugfix:
- fix that endless repeats of multiple pumping steps could lead to a crash


from version 0.95 to 0.96

improvement: